# SGFramework

./: .gitignore  README.md  SGFramework.userprefs  TODO  doc.txt
Assets/FZSG/: FZSG.unity  SGFMainBehaviourScript.cs  main.lua
Assets/FZSG/FZSGRes/res/wins/: Login.prefab  MainWin.prefab
Assets/FZSG/FZSGRes/src/: main.lua
Assets/FZSG/FZSGRes/src/Base/: Event.lua  Functions.lua  Timer.lua  UIBase.lua  UIUtil.lua  WinBase.lua  WinBasePrefab.lua  WinMgr.lua
Assets/FZSG/FZSGRes/src/Network/: Network.lua  NetworkType.lua
Assets/FZSG/FZSGRes/src/Window/: HotUpdateWin.lua  MainWin.lua
Assets/FZSG/FZSGRes/src/core/: functions.lua
Assets/FZSG/dres/: main.lua
Assets/FZSG/dres/res/TestWin/: MainWin.prefab  Master.prefab  MenuItem.prefab
Assets/FZSG/dres/res/Wins/: MainWin.prefab
Assets/FZSG/dres/res/wins/: HotUpdateWin.prefab  MainWin.prefab
Assets/FZSG/dres/src/Base/: Animation.lua  Event.lua  Functions.lua  Init.lua  ItemBase.lua  MsgMgr.lua  Scroller.lua  Table.lua  Timer.lua  UIBase.lua  UIUtil.lua  WinBase.lua  WinBasePrefab.lua  WinMgr.lua
Assets/FZSG/dres/src/Conf/: GameConf.lua
Assets/FZSG/dres/src/Window/: LoadingWin.lua  MainWin.lua  MessageBox.lua  TestWin.lua
Assets/LuaScript/: main.lua
Assets/Resources/PRAL/core/: print.lua
Assets/Resources/PRAL/src/: main.lua
Assets/Resources/SGRunner/: Language.json
Assets/SGFConfig/: SGFConfig.json
Assets/SGFramework/: SGFRunner.unity
Assets/SGFramework/Editor/: AssetBundleBuild.cs  AssetBundleCheck.cs  ResEditor.cs
Assets/SGFramework/Editor/Builders/: AssetsBundle.cs
Assets/SGFramework/Editor/XLuaExt/: LuaButtonEditor.cs  LuaButtonInspector.cs
Assets/SGFramework/Editor/XLuaExt/UI/: LuaUI.cs
Assets/SGFramework/SGFScript/: LuaRunner.cs  ResMgr.cs  SGFBaseMainMonoBehaviour.cs  SGFMainBehaviour.cs  SGFMainBehaviourScript.cs  SGFManager.cs  SGFResMgr.cs
Assets/SGFramework/SGFScript/Core/: DesEncryption.cs  Dictionary.cs  Encryption.cs  File.cs  MD5.cs  Path.cs  Serializable.cs  StringExtentions.cs  ZipHelper.cs
Assets/SGFramework/SGFScript/HotUpdate/: Language.cs  SGFRunner.cs  SGFRunnerHotUpdate.cs  SGFRunnerTaskMgr.cs
Assets/SGFramework/SGFScript/Lua/: CheckRes.cs  Config.cs  Game.cs  HotUpdate.cs  Http.cs  Lua.cs  Path.cs  ResMgr.cs  ResVersion.cs  RootBehaviour.cs  SGFLua.cs  SGFMainBehaviour.cs  SGFManager.cs  SGFResMgr.cs  ValidationLocalFiles.cs  ValidationVersion.cs
Assets/SGFramework/SGFScript/Test/: EventTest.cs
Assets/SGFramework/SGFScript/Unity/: AsyExecutor.cs  FileUtils.cs  FpsInfo.cs  JsonSerializable.cs  ResMgr.cs  ULog.cs
Assets/SGFramework/SGFScript/XLuExt/: LuaUIButton.cs  UICompnentLuaHander.cs
Assets/SGFramework/Scene/: SGRunner.unity
Assets/SGFramework/Script/: ResMgr.cs  XLuaMain.cs
Assets/SGFramework/Script/Unity/: Downloader.cs  HttpDownloader.cs  IDownload.cs  Patcher.cs  Path.cs  ResMgr.cs
Assets/SGFramework/material/: Black.mat  Black.shader  Gaussian Blur.mat  Gaussian Blur.shader  Gray.mat  Gray.shader
Assets/SGScene/: SGRunner.unity
Assets/Test/: Layers.unity  SGFMainBehaviourScript.cs  UIDepth.cs
SGF.Core/: SGF.Core.csproj
SGF.Core/Properties/: AssemblyInfo.cs
SGF.Ecs/: Component.cs  Entity.cs  SGF.Ecs.csproj  System.cs
SGF.Ecs/Properties/: AssemblyInfo.cs
SGF.Log/: CSharConsolLogger.cs  ILoger.cs  IOnLoggerInit.cs  Log.cs  SGF.Log.csproj  UnityLogger.cs
SGF.Log/Properties/: AssemblyInfo.cs
SGF.Protobuffer/: SGF.Protobuffer.csproj
SGF.Protobuffer/Properties/: AssemblyInfo.cs
SGF.Test/UnityTest/Assets/Scenes/: LogTest.unity  Logger.prefab  test.cs
client/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  SGF_AUTO_HOTUPDATE_CONFG.json  SGF_AUTO_PROJECT_CONFIG.json
client/Assets/DResources/src/: main.lua
client/Assets/Scene/: Game.unity  HotUpdateTest.unity
client/Assets/Script/Core/: Dictionary.cs  Encryption.cs  File.cs  IoC.cs  Path.cs  Serializable.cs  StringExtentions.cs  ZipHelper.cs
client/Assets/Script/Unity/: Config.cs  Game.cs
client/Assets/StreamingAssets/dres/: version.json  versionFiles.json
client/Assets/XLua/Editor/: ExampleConfig.cs
client/Assets/XLua/Src/: LuaEnv.cs
client/Temp/: UnityTempFile-02dc1815ed15343fb8f9bf7a2987525f  UnityTempFile-05de8e747d86b43b8af18aba0536d620  UnityTempFile-287138d2824174061b68b4455942b267  UnityTempFile-2cdf1a7ddb26a4f84a56e9fda2a7c917  UnityTempFile-2e701fe88daf44e36afa8bb44ca5475a  UnityTempFile-423499db90acf40b3b030f8d1552c948  UnityTempFile-5482f7327dcff407a90425fd9f50a526  UnityTempFile-54e82c89228ac4828b3c6f2cabb6648e  UnityTempFile-5fb76788d4a7d4247874f3a409c3693e  UnityTempFile-89c71e8b3f2c842d794dec5e643736df  UnityTempFile-a61641f1b359249c598faf2f06f1ca1f  UnityTempFile-ae863031f382446faad15aaa15417faf  UnityTempFile-b6833d0998df641c69026660670dedfd  UnityTempFile-b708f058fee7741d8913a3ad85fcbbf0  UnityTempFile-cc96e71e09c794bc7a903e7a16fd4cc5  UnityTempFile-edd43d195c0fc426e9672eb52454937a
client/Temp/__Backupscenes/: 0.backup
comm/: SGFComm.fbs  configs.fbs  flatc  generated_code.sh  generated_code2project.sh
fzsgPatchOutDir/: version.json
fzsgPatchOutDir/src/: main.lua
fzsgPatchOutDir/src/core/: init.lua
fzsgPatchOutDir/src/core/ui/: winmgr.lua
fzsgPatchOutDir/src/wins/: loginWin.lua
server/: CMakeLists.txt
server/framework/core/: modues.cpp
server/framework/core/log/: log.cpp
server/framework/core/net/: tcp.cpp
server/framework/sgame/: macros.hpp  modules.hpp
server/framework/sgame/log/: log.hpp
server/framework/sgame/net/: session.hpp  tcp.hpp
server/servers/gamesvr/: main.cpp
server/servers/gamesvr/logic/: handler.hpp
server/servers/gamesvr/modules/: config.hpp
server/servers/loginsvr/modules/: gamesvr.hpp
server/servers/publicsvr/: main.cpp
server/servers/publicsvr/config/: config.json
server/servers/publicsvr/modules/: config.cpp  gamesvr.cpp
server/src/: test.go
(+80 files in other folders)
